# rust-kata-004

./: Cargo.toml  README.md
configuration/: default.yaml  local.yaml  production.yaml
poc/: Dockerfile  RUST.md  TOR.md  docker-compose.yaml
scripts/: signal-rust-kata-004.sh  signal-tor-stub.sh
src/: lib.rs  main.rs  main_crd_gen.rs  routes.rs  startup.rs
src/configuration/: environment.rs  http_server_configuration.rs  mod.rs
src/kubernetes/: data.rs  error.rs  error_policy.rs  manager.rs  mod.rs  reconcile.rs  tor_hidden_service_spec.rs  tor_hidden_service_status.rs
src/telemetry/: configure.rs  extensions.rs  init.rs  mod.rs
src/tor_server/: command.rs  controller.rs  event_loop.rs  job.rs  mod.rs  pid.rs  scheduler.rs
tests/: health.rs
tests/server/: mod.rs
tor-stub/: Cargo.toml
tor-stub/src/: main.rs
tor-sub-process/: Cargo.toml
tor-sub-process/src/: command.rs  configuration.rs  controller.rs  event_loop.rs  file_system.rs  hidden_service_directory.rs  job.rs  lib.rs  libc_wrapper.rs  main.rs  pid.rs  scheduler.rs  secret_file.rs  tor_rc.rs
yaml/: instance-1.yaml  instance-2.yaml  torhiddenservice-crd.yaml
