[package]
name = "rust-kata-004"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

[workspace]
members = [
    "tor-stub",
    "tor-sub-process"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-kata-004"
path = "src/main.rs"

[dependencies]
tor-sub-process = { path = "tor-sub-process" }

