[package]
name = "rust-kata-004"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

[workspace]
members = [
    "tor-stub",
    "tor-sub-process"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-kata-004"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.3"
config = "0.10.1"
serde = "1.0.123"
tor-sub-process = { path = "tor-sub-process" }

[dev-dependencies]
actix-rt = "2.1.0"
reqwest = "0.11.1"
tokio = "1.2.0"

