[package]
name = "rust-kata-004"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

[workspace]
members = [
    "tor-stub",
    "tor-sub-process"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-kata-004"
path = "src/main.rs"

[[bin]]
name = "crd-gen"
path = "src/main_crd_gen.rs"

[dependencies]
actix-web = "4.0.0-beta.3"
config = "0.10.1"
futures = "0.3.13"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.50.1", default-features = false, features = ["derive", "rustls-tls"] }
kube-runtime = { version = "0.50.1", default-features = false, features = ["rustls-tls"] }
schemars = "0.8.0"
serde = "1.0.123"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
tokio = "1.2.0"
tor-sub-process = { path = "tor-sub-process" }
tracing = "0.1.25"
tracing-actix-web = "0.3.0-beta.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.16"

[dev-dependencies]
actix-rt = "2.1.0"
reqwest = "0.11.1"
tokio = "1.2.0"

