[package]
name = "tor-stub"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = { version = "0.3.6", features = ["channel"] }
tokio = { version = "1.2.0", features = ["macros", "process", "rt-multi-thread", "time"] }
