[package]
name = "tor-sub-process"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.86", features = [] }
signal-hook = { version = "0.3.6", features = ["channel"] }
tokio = { version = "1.2.0", features = ["macros", "process", "rt-multi-thread", "time"] }

[dev-dependencies]
fake = "2.4.0"
